Fix alignment of logo in footer

--- a/public/css/atomic-d10870.webflow.css
+++ b/public/css/atomic-d10870.webflow.css
@@ -5305,7 +5305,7 @@
   }
 
   .af-view .af-class-image-39 {
-    max-width: 75%;
+    max-width: 55%;
     margin-bottom: 47px;
   }
 
